2006-08-02  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/28556
	* gnu/java/security/key/rsa/RSAKeyPairPKCS8Codec.java (encodePrivateKey):
	Updated documentation to clarify that RFC-2459 states that the parameters
	field of the AlgorithmIdentifier element MUST be NULL if present.
	Amended the code to reflect the specs.
	(decodePrivateKey): Handle case of NULL AlgorithmIdentifier.parameters.

2006-08-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/OpenMBeanParameterInfoSupport.java:
	Call parameter 'defaultValue' not 'defValue'.

2006-08-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/OpenMBeanParameterInfoSupport.java:
	New file.

2006-08-01  Roman Kennke  <kennke@aicas.com>

	PR 28562
	* javax/swing/plaf/basic/BasicOptionPaneUI.java
	(PropertyChangeHandler.propertyChange): Cleanly reinstall
	components when visual property chanegs.

2006-08-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/OpenMBeanAttributeInfo.java:
	(toString()): Corrected documentation.
	* javax/management/openmbean/OpenMBeanConstructorInfo.java,
	* javax/management/openmbean/OpenMBeanInfo.java,
	* javax/management/openmbean/OpenMBeanOperationInfo.java:
	New files.
	* javax/management/openmbean/OpenMBeanParameterInfo.java:
	(toString()): Corrected documentation.
	
2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/Choice.java
	(remove(int)): Added documentation.

2006-08-01  Tania Bento  <tbento@redhat.com>
	
	* java/awt/Choice.java
	(remove(int)): An IllegalArgumentException should not be thrown
	if int is invalid.  Update selectedIndex and peer selection.

2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/CardLayout.java
	(toString): Changed format of string outputted.
	(goToComponent): Changed the order of the if-clause.

2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/List.java
	(select): Check if selected is null before execution of