@@ -1,5 +1,10 @@
 2006-08-02  Raif S. Naffah  <raif@swiftdsl.com.au>
 
+	PR Classpath/23899
+	* java/security/SecureRandom.java (next): Call nextBytes as per specs.
+
+2006-08-02  Raif S. Naffah  <raif@swiftdsl.com.au>
+
 	PR Classpath/28556
 	* gnu/java/security/key/rsa/RSAKeyPairPKCS8Codec.java (encodePrivateKey):
 	Updated documentation to clarify that RFC-2459 states that the parameters
